// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager gas tests #donate donation of 1 token 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 150990,
}
`;

exports[`PoolManager gas tests #donate donation of 2 tokens 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 218080,
}
`;

exports[`PoolManager gas tests #initialize initialize pool with no hooks and no protocol fee 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 54061,
}
`;

exports[`PoolManager gas tests #mint above current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 178228,
}
`;

exports[`PoolManager gas tests #mint above current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 237970,
}
`;

exports[`PoolManager gas tests #mint above current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 178228,
}
`;

exports[`PoolManager gas tests #mint around current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 250109,
}
`;

exports[`PoolManager gas tests #mint around current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 359725,
}
`;

exports[`PoolManager gas tests #mint around current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 250109,
}
`;

exports[`PoolManager gas tests #mint below current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 178936,
}
`;

exports[`PoolManager gas tests #mint below current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 306585,
}
`;

exports[`PoolManager gas tests #mint below current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 178936,
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 232538,
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 226616,
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 251521,
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 293669,
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 244580,
}
`;

exports[`PoolManager gas tests #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 232538,
}
`;

exports[`PoolManager gas tests #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 226704,
}
`;

exports[`PoolManager gas tests #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 245716,
}
`;

exports[`PoolManager gas tests #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 287838,
}
`;
